
using UnityEngine;

namespace Environment
{
	public interface IAccelerationSensor
	{
		public Vector3 GetAcceleration();
	}
}