using UnityEngine;

namespace Environment
{
	public interface IGyroSensor
	{
		public Vector3 GetGyro();
	}
}