namespace Environment
{
	public interface IHumiditySensor
	{
		public float GetHumidity();
	}
}