namespace Environment
{
	public interface IPressureSensor
	{
		public float GetPressure();
	}
}