using System.Collections.Generic;

namespace Environment
{
	public interface ISensorUnit
	{
		public void StartSensor();
		public void UpdateSensor();
	}
}