namespace Environment
{
	public interface IToFSensor
	{
		public bool GetCollisionDist();
	}
}