namespace Environment
{
	public interface ICO2Sensor : ISensorUnit
	{
		public float GetPPM();
	}
}