@startuml
title weak-toio 設計
skinparam Linetype ortho

' オブジェクト
interface ISensorUnit{
	+ GetEnvType() : EnvType
	+ Setup() : void
	+ Update() : void
}
interface IAccelerationSensor{
	+ GetAcceleration() : vector3
}
interface IGyroSensor{
	+ GetGyro() : vector3
}
interface ICO2Sensor{
	+ GetPPM() : float
}
interface ITemperetureSensor{
	+ GetTemperature() : float
}
interface IHumiditySensor{
	+ GetHumidity() : float
}
interface IPressureSensor{
	+ GetPressure() : float
}
interface IToFSensor{
	+ GetObjectDistance() : float
}
interface IENV2Sensor
interface IM5Sensor
enum EnvType
interface ISerialConnector{
	- OnDataReceived()
}

class Evaluate{
	+ GetEvaluationResult(T sensor) : Result
	' 各評価クラスに応じて必要なSensorUnitを要求する
}
struct Result{
	int score
}

interface IEvaluationResultSender{
	+ GetEvaluationResult(T sensor) : Result
}
class ActionGenerator{
	+ GenerateAction(Result) : Action
	- CautionAction() : Action
	- DangerAction() : Action
}
class Action{
	Queue<Motion> motions
	+ Action()
	+ GetNextMotion() : Motion
	+ Count() : int
}
class Motion {
	+ IToioCommand command{get; private set;}
	+ float interval{get; private set;}
	+ Motion(delegate, float)
	+ Motion(IToioCommand, float)
}

interface IActionSender{
	+ GenerateAction(Result) : Action
}
interface IToioActionGenerator{
	+ GetTranslateAction(Toio) : IEnumerator
	+ GetRotateAction(Toio) : IEnumerator
	+ GetSoundAction(Toio) : IEnumerator
	+ GetLEDAction(Toio) : IEnumerator
}
class Toio{
	- int id
	- Cube cube
	- CubeHandler handle
	- Queue<Action> actions
	- Action currentAction
	+ StartMove() : IEnumerator
}
package toioSdk{
	class CubeManager
	class CubeHandler{
		+ TranslateByDist()
		+ RotateByDeg()
		+ RotateByRad()
	}
}

interface IToioCommand {
	+ Execute(Toio toio) : void
}

class TranslateCommand {
	- float distance
	+ TranslateCommand(float distance)
	+ Execute(Toio toio) : void
}

class RotateCommand {
	- float angle
	+ RotateCommand(float angle)
	+ Execute(Toio toio) : void
}

class SoundCommand {
	- int soundId
	+ SoundCommand(int soundId)
	+ Execute(Toio toio) : void
}

class LEDCommand {
	- byte r
	- byte g
	- byte b
	+ LEDCommand(byte r, byte g, byte b)
	+ Execute(Toio toio) : void
}

class ToioCommandFactory {
	+ CreateTranslateCommand(float distance) : IToioCommand
	+ CreateRotateCommand(float angle) : IToioCommand
	+ CreateSoundCommand(int soundId) : IToioCommand
	+ CreateLEDCommand(byte r, byte g, byte b) : IToioCommand
}


' 関係
ISensorUnit <|-- IAccelerationSensor : 継承
ISensorUnit <|-- IGyroSensor : 継承
ISensorUnit <|-- ITemperetureSensor : 継承
ISensorUnit <|-- IHumiditySensor : 継承
ISensorUnit <|-- IPressureSensor : 継承
ISensorUnit <|-- ICO2Sensor : 継承
ISensorUnit <|-- IToFSensor : 継承

IM5Sensor o-- IAccelerationSensor : 継承
IM5Sensor o-- IGyroSensor : 継承
IM5Sensor o-- ISerialConnector : 継承

IENV2Sensor o-- ITemperetureSensor : 継承
IENV2Sensor o-- IHumiditySensor : 継承
IENV2Sensor o-- IPressureSensor : 継承

ISensorUnit <-- Evaluate : 利用
Evaluate o-- SensorInfo : データフォーマットを定義
ISensorUnit --> SensorInfo
Evaluate <-- Result : 生成

Evaluate --|> IEvaluationResultSender : 実装
IEvaluationResultSender <-- ActionGenerator : 利用
ActionGenerator <-- Action : 生成
Action o-- Motion : 所持
Toio o-left- Action : 所持
IToioActionGenerator <-right- ActionGenerator : 利用

ActionGenerator -|> IActionSender
IActionSender <-- Toio : 利用
Toio --> CubeHandler : 所持
CubeHandler -> CubeManager : 所持
Toio -right--|> IToioActionExecutor : 実装
IToioActionExecutor <-- Main : 使用

IToioCommand <|-- TranslateCommand
IToioCommand <|-- RotateCommand
IToioCommand <|-- SoundCommand
IToioCommand <|-- LEDCommand
ToioCommandFactory ..> IToioCommand : 生成
Motion o-- IToioCommand : 所持
IToioActionGenerator <-- ToioCommandFactory : 実装

@enduml